persons salary filter and readme docs created
